--- a/css/css_1.css
+++ b/css/css_1.css
@@ -69,7 +69,7 @@ body {
 }
 
 .txt_input {
-    font-family: 'Sarasa Mono SC';
+    font-family: 'Consolas';
     font-style: normal;
     font-weight: 700;
     font-size: 24px;
